--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,15 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  auto_size_text: ^3.0.0
   cupertino_icons: ^1.0.2
+  dot_navigation_bar: ^1.0.1+4
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.0.2
+  flutter_riverpod: ^2.3.6
+  google_fonts: ^4.0.4
+  phosphor_flutter: ^2.0.0
   supabase_flutter: ^1.8.1
 
 dev_dependencies:
@@ -52,6 +57,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env
+    - assets/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
